--- a/melody_generator.yaml
+++ b/melody_generator.yaml
@@ -24,7 +24,9 @@ demo-video-url: ""
 desc: >
   Our project is an interactive melody generator. It takes in a key, tonality, 
   and the length of the desired melody and returns a list of notes representing 
-  the generated melody. Some features that we have include setting the first few
-  and last few notes to some pre-specified indexes that match with the inputted
-  key in order to generate a "better sounding" melody. GUIs are not supported
-  yet but will be in the future.
+  the generated melody, corresponding chords to the generated melody, a note 
+  sheet that gives a visual representation of the notes generated, and the seed 
+  of the melody. Additionally, there is audio output for the melody generated.
+  Some additional features that we have include setting the first 
+  few and last few notes to some pre-specified indexes that match with the 
+  inputted key in order to generate a "better sounding" melody. 
